      removing the usual duplication between these values.
      
      Before:
      
      <bean class="..." id="theBean">
         <property name="id" value="theBean"/>
         ...
      </bean>
      
      After:
      
      <bean class="net.shibboleth.ext.spring.config.IdentifiableBeanPostProcessor"/>
      
      <bean class="..." id="theBean">
         ...
      </bean>
      

API Changes
    * ElementFormattingStage removed
    * EntityPublisherPathFilterStage removed
    * PushDownCacheDurationStage removed
    * PushDownValidUntilStage removed
    * SetPublicationInfo removed
    * XMLSignatureSigningStage's deriveKeyNames property removed
    * new property collectionPredicate added on all stages
    * new AtLeastCollectionPredicate class added
    * PrivateKeyFactoryBean, PublicKeyFactoryBean, X509CertificateFactoryBean
      and X509CertificateChainFactoryBean input properties are all now
      called "resource" and are all Spring Resource objects rather than
      Java File objects.

** Bug
    * [MDA-130] - NPE in DOMResourceStage if resource reading fails

** New Feature
    * [JSE-1] - change factory beans to operate on resources, not files
    * [MDA-132] - generic conditional execution of stages

** Task
    * [MDA-122] - remove unimplemented stages and properties
    * [MDA-124] - Move from using Shibboleth resources to using Spring ones
    * [MDA-125] - can't set some properties on XMLSignatureValidationStage from
                  Spring configurations
    * [MDA-127] - simplify output from StatusMetadataLoggingStage
    * [MDA-128] - use @Override annotation in MDA sources
    * [MDA-129] - remove semi-functional ElementFormattingStage
    * [MDA-133] - unbundle "endorsed" libraries from distribution


Release Notes - Metadata Aggregator - Version 0.8.0
===================================================

Highlights
   * API changes for new Shibboleth coding conventions, and in the
     use of generic types